--- a/src/assets/styles/sections/_getStarted.scss
+++ b/src/assets/styles/sections/_getStarted.scss
@@ -36,4 +36,12 @@
     flex-direction: column;
   }
   }
+  @media screen and (max-width: 768) {
+    &__title{
+        font-size: 28px;
+    }
+    &__description{
+        font-size: 16px;
+    }
+  }
 }
