--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -88,6 +88,8 @@
       }
       &-title{
         cursor: pointer;
+        width: 100%;
+        text-align: center;
       }
       &-list{
         align-items: center;
