--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -52,8 +52,6 @@
     line-height: 171%;
     padding: 8px 24px;
     color: $black;
-    
-    
   }
   &__sign-up {
     line-height: 171%;
@@ -61,6 +59,61 @@
     font-size: 14px;
     padding: 8px 24px;
     color: $white;
-    
+  }
+  &__burger-btn {
+    display: none;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    transform: rotate(0deg);
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+    span {
+      display: block;
+      position: absolute;
+      height: 4px;
+      width: 100%;
+      background: $black;
+      border-radius: 9px;
+      opacity: 1;
+      left: 0;
+      transform: rotate(0deg);
+      transition: 0.25s ease-in-out;
+      &:nth-child(1) {
+        top: 0px;
+      }
+      &:nth-child(2) {
+        top: 10px;
+      }
+      &:nth-child(3) {
+        top: 20px;
+      }
+    }
+    &.open {
+      span {
+        &:nth-child(1) {
+          top: 10px;
+          transform: rotate(135deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:nth-child(3) {
+          top: 10px;
+          transform: rotate(-135deg);
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 1023) {
+    &__nav{
+      display: none;
+    }
+    &__auth-buttons{
+      display: none;
+    }
+    &__burger-btn{
+      display: block;
+    }
   }
 }
