--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -16,6 +16,10 @@ body{
     &:has(.popup-form.active){
         overflow: hidden;
     }
+
+    &:has(.burger.open){
+        overflow: hidden;
+    }
     color: $black;
 }
 
